# birds.yassfuentes.es

./: .dockerignore  .env.example  .gitignore  CNAME  CNAME.example  Dockerfile  LICENSE  README.md  archive.html  docker-compose.yml  feed.xml  history.json  index.html  pyproject.toml
.github/: bird-of-the-day.yml.example
cache/: afbtit2.enriched.json  afbtit2.image.json  afbtit2.json  afroys1.enriched.json  afroys1.image.json  afroys1.json  bargoo.enriched.json  bargoo.image.json  bargoo.json  batgod.enriched.json  batgod.image.json  batgod.json  bearee1.enriched.json  bearee1.image.json  bearee1.json  bkewhe1.enriched.json  bkewhe1.image.json  bkewhe1.json  bkrwhe1.image.json  bkrwhe1.json  blackc1.enriched.json  blackc1.image.json  blackc1.json  blakit1.enriched.json  blakit1.image.json  blakit1.json  blared1.enriched.json  blared1.image.json  blared1.json  blueth.enriched.json  blueth.image.json  blueth.json  blutit.enriched.json  blutit.image.json  blutit.json  brambl.enriched.json  brambl.image.json  brambl.json  callar1.enriched.json  callar1.image.json  (+256 more)
data/: config.example.json  config.json
docker/: crontab  entrypoint.sh  healthcheck.sh  nginx.conf  placeholder.html
scripts/: __init__.py  content_scraper.py  distribution_map.py  ebird_client.py  feed_builder.py  generate.py  i18n.py  image_fetcher.py  llm_enricher.py  map_composer.py  name_linker.py  seed_mock.py  site_builder.py
tests/: test_description_policy.py  test_ebird_selection.py  test_esc_html.py  test_feed_cdata.py  test_i18n_catalog.py  test_llm_enricher.py  test_map_composer.py  (+2 more)
(+7 files in other folders)
